--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,3 @@
-#aux_source_directory(. SRC_LIST)
-set(SRC_LIST 
-    mprpcapplication.cc 
-    mprpcconfig.cc 
-    rpcheader.pb.cc 
-    rpcprovider.cc 
-    mprpcchannel.cc
-    mprpccontroller.cc
-    logger.cc
-    zookeeperutil.cc)
+aux_source_directory(. SRC_LIST)
 add_library(mprpc ${SRC_LIST})
 target_link_libraries(mprpc muduo_net muduo_base pthread zookeeper_mt)
